--- a/数据库系统综述.md
+++ b/数据库系统综述.md
@@ -2,89 +2,13 @@
 
 |       课程名称       | 授课教师 | 授课地点 |   班级    | 姓名 |   学号    |
 | :------------------: | :------: | :------: | :-------: | :--: | :-------: |
-| 《分布式数据库系统》 |  周晓慧  |  12-216  | 自动化5班 | 龚镖 | 181060074 |
+| 《分布式数据库系统》 |    |  12-216  |  | 龚镖 | 181060074 |
 
 ---
 
 ### 摘要
 
-1
 
-2
-
-3
-
-4
-
-5
-
-6
-
-7
-
-8
-
-9
-
-10
-
-11
-
-12
-
-13
-
-14
-
-15
-
-16
-
-17
-
-18
-
-20
-
-21
-
-22
-
-23
-
-24
-
-25
-
-
-
-
-
-
-
-
-
-30
-
-
-
-
-
-
-
-
-
-35
-
-
-
-
-
-
-
-
-
-40
 
 ### 发展历程
 
